test_case/rust-lang_rust/12223_37158034.rs
 rust
fn main() {
    let a = ~"";
    let b: Vec<&str> = a.lines().collect();  // note: borrow of `a[..]` occurs here
    drop(a);    // error: cannot move out of `a` because it is borrowed
}
